<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#282828"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/workingTV"
        android:layout_width="377dp"
        android:layout_height="98dp"
        android:layout_above="@id/resultTV"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        android:lines="2"
        android:maxLines="2"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="#FF03DAC5"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/resultTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons_layout"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:lines="1"
        android:maxLines="1"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="#FFB300"
        android:textSize="64sp" />


    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#252525"
        android:orientation="vertical"
        android:paddingVertical="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_bs"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:backgroundTint="#F44336"
                android:onClick="backSpaceAction"
                android:text="@string/back_space"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_mod"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:backgroundTint="#A1A1A1"
                android:onClick="operationAction"
                android:text="@string/mod"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sqrt"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:backgroundTint="#A1A1A1"
                android:onClick="operationAction"
                android:text="@string/sqrt"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_div"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:onClick="operationAction"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_7"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:onClick="numberAction"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_8"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:onClick="numberAction"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:onClick="numberAction"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_mul"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:onClick="operationAction"
                android:text="@string/mul"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_4"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:onClick="numberAction"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_5"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:onClick="numberAction"
                android:text="@string/_5"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:onClick="numberAction"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:onClick="operationAction"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_1"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:onClick="numberAction"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_2"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:onClick="numberAction"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:onClick="numberAction"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:onClick="operationAction"
                android:text="@string/minus"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ac"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:backgroundTint="#F44336"
                android:onClick="allClearAction"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_0"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:onClick="numberAction"
                android:text="@string/_00"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:onClick="numberAction"
                android:text="@string/dot"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_eql"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="12dp"
                android:backgroundTint="#FF9800"
                android:onClick="equalAction"
                android:text="@string/ewual"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:cornerRadius="36dp" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
